# torchchronos

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
doc/source/: conf.py  datasets.rst  index.rst  lightning.rst  transforms.rst
examples/: Datasets.ipynb  MultiDatasetModule.ipynb  PreparableDataset.ipynb  PrepareData.ipynb  test.ipynb
tests/: data_class.py  debug.py  test_aeon_dataset.py  test_datasets.py  test_download_ucr_uea.py  test_label_datatype.py  test_lightning_gunpoint.py  test_lightning_phoneme_spectra.py  test_lightning_split.py  test_parse_ts.py  test_tfc_pretrain.py  test_transforms_gunpoint.py  test_ucr_dataset.py
tests/fixtures/: Custom_Missing_TEST.ts  GunPoint_TEST.ts  PhonemeSpectra_TEST.ts
tests/test_datasets/: test_aeon_datasets.py  test_base_dataset.py  test_cached_dataset.py  test_prepareable_dataset.py
tests/test_transformations/: test_base_transform.py  test_basic_transforms.py  test_format_conversion_transforms.py  test_representaion_transforms.py  test_spectral_transforms.py  test_structure_transformations.py  test_structure_transforms.py
torchchronos/: __init__.py  download.py  errors.py  typing.py  utils.py
torchchronos/datasets/: __init__.py  aeon_datasets.py  base_dataset.py  cached_datasets.py  concat_dataset.py  datasets.py  download_datasets.py  multi_dataset_data_module.py  multidatasetdataset.py  prepareable_dataset.py  shuffled_dataset.py  tfc_pretrain.py  ucr_uea.py  ucr_uea_dataset.py  utils.py
torchchronos/datasets/util/: aeon_datasets.py  base_dataset.py  cached_datasets.py  concat_dataset.py  prepareable_dataset.py  shuffled_dataset.py  tc_datasets.py
torchchronos/lightning/: __init__.py  dataset_data_module.py  multi_dataset_data_module.py  tfc_pretrain.py  ucr_uea.py  ucr_uea_module.py
torchchronos/transforms/: __init__.py  base.py  base_transforms.py  basic_transforms.py  format_conversion_transforms.py  fourier.py  padding.py  polar.py  representation_transformations.py  spectral_transforms.py  structure_transforms.py  transformation_exceptions.py  transforms.py
