[tool.poetry]
name = "torchchronos"
version = "0.0.3-post1"
authors = ["Maurice Kraus <dev@mkraus.io>"]
readme = "README.md"
description = "PyTorch and Lightning compatible library that provides easy and flexible access to various time-series datasets for classification and regression tasks"
license = "MIT"
homepage = "https://github.com/mauricekraus/torchchronos"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sktime = "^0.16.1"
torch = "^2.0.0"
lightning = "^2.0.0"
fastapi = { version = "^0.88.0" }
uplink = "^0.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
